--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -36,3 +36,9 @@ body {
   color: $colorPrimaryBase !important;
   fill: $colorPrimaryBase !important;
 }
+
+.img-fluid {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
