--- a/components/button/style.scss
+++ b/components/button/style.scss
@@ -5,8 +5,9 @@
   outline: none;
   font-family: $fontRegular;
   font-size: 1rem;
-  padding: 0px 35px;
-  height: 60px;
+  padding: 15px;
+  //height: 55px;
+  flex: none;
   border-radius: $raduisBtn;
   border: 2px solid $colorPrimaryBase;
   position: relative;
@@ -15,6 +16,10 @@
   align-items: center;
   justify-content: center;
   column-gap: 10px;
+  & svg {
+    height: 1.1rem;
+    width: 1.1rem;
+  }
 }
 .btn-icon {
   padding: 13px 20px;
@@ -154,8 +159,4 @@
 
 .btn-link {
   text-decoration: none;
-  padding: 0 20px;
-  border-radius: $raduisBtn;
-  display: flex;
-  height: 40px;
 }
