feat(ui): Complete UI components creation
This commit finalizes the creation of all UI components required. All visual and interactive features have been implemented according to specifications. This includes layout, user interactions, styles, and necessary animations. Ready to move on to the next stage of development.

--- a/components/card/style.scss
+++ b/components/card/style.scss
@@ -230,7 +230,7 @@
     border-radius: 0.5rem;
     width: 200px;
     flex: none;
-    height: 200px;
+    //height: 200px;
   }
   & .content__details {
     display: flex;
@@ -244,6 +244,12 @@
       font-size: 1.3rem;
 
       line-height: 1.48rem;
+    }
+    & .rating__count {
+      display: flex;
+      & svg {
+        color: $colorPrimaryBase;
+      }
     }
     & .detail {
       font-family: $fontRegular;
