--- a/app/index.style.scss
+++ b/app/index.style.scss
@@ -1,1 +1,130 @@
 @import "../public/style/main.scss";
+
+#homePage {
+  display: flex;
+  flex-direction: column;
+}
+
+#banner_home {
+  display: flex;
+  flex-direction: column;
+  padding: $paddingSection 0;
+  position: relative;
+  padding-top: 200px;
+  row-gap: 83px;
+  &::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    box-sizing: 0;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.12),
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.9),
+      rgb(0, 0, 0)
+    );
+  }
+
+  .random__movie_container {
+    z-index: 10;
+    padding: 0 $paddingSection;
+    @include flexbox(column, flex-start, flex-start);
+    row-gap: 20px;
+    & span {
+      font-family: $fontBold;
+      font-size: 5rem;
+    }
+    .detail {
+      font-family: $fontRegular;
+      opacity: 0.8;
+    }
+    .overview {
+      font-family: $fontRegular;
+      opacity: 0.8;
+      font-size: 1.2rem;
+      line-height: 1.5rem;
+    }
+  }
+
+  .container__similar_movie {
+    z-index: 10;
+    @include flexbox(column, flex-start, flex-start);
+    row-gap: 10px;
+    & .title__section {
+      margin: 0 $paddingSection;
+    }
+  }
+}
+
+#popular__movie {
+  @include flexbox(column, flex-start, flex-start);
+  row-gap: 20px;
+  & .title__section {
+    margin: 0 $paddingSection;
+  }
+}
+
+#content__movie_popular {
+  @include flexbox(column, flex-start, flex-start);
+  row-gap: 20px;
+  padding: 100px $paddingSection;
+  position: relative;
+  transition: all 0.3s ease-in-out !important;
+  & h1 {
+    font-family: $fontBold;
+    font-size: 3rem;
+    z-index: 10;
+  }
+
+  .details__movie {
+    display: flex;
+    column-gap: 10px;
+    z-index: 10;
+    & .rating {
+      @include flexbox(row, flex-start, flex-start);
+      & * {
+        color: $colorPrimaryBase;
+      }
+    }
+  }
+  .overview {
+    z-index: 10;
+    font-family: $fontRegular;
+    opacity: 0.8;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+  }
+  .controll-action-button {
+    @include flexbox(row, flex-start, flex-start);
+    z-index: 10;
+    column-gap: 15px;
+    & .btn {
+      height: 100% !important;
+      align-self: stretch;
+    }
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    box-sizing: 0;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.12),
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.9),
+      rgb(0, 0, 0)
+    );
+  }
+}
