--- a/components/button/style.scss
+++ b/components/button/style.scss
@@ -5,7 +5,7 @@
   outline: none;
   font-family: $fontRegular;
   font-size: 1rem;
-  padding: 10px;
+  padding: 10px 20px;
   //height: 55px;
   flex: none;
   border-radius: $raduisBtn;
@@ -159,4 +159,5 @@
 
 .btn-link {
   text-decoration: none;
+  padding: 11px 20px;
 }
