--- a/components/titleSection/style.scss
+++ b/components/titleSection/style.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  align-self: stretch;
   & .title-large {
     font-size: 1.8rem;
     color: $colorNeutral2;
