feat ui: Add ContainerFilmsRecent component
- Implemented ContainerFilmsRecent component to display a section of recent films.
- Utilizes fake data to populate the list of recent films.
- Each film is represented by a CardMovie component within a scrollable container.

--- a/app/index.style.scss
+++ b/app/index.style.scss
@@ -128,3 +128,11 @@
     );
   }
 }
+
+#film__recentes {
+  @include flexbox(column, flex-start, flex-start);
+  row-gap: 20px;
+  & .title__section {
+    margin: 0 $paddingSection;
+  }
+}
