--- a/components/card/style.scss
+++ b/components/card/style.scss
@@ -171,15 +171,15 @@
   & * {
     transition: all 0.3s linear;
   }
-  &:hover {
-    border: 4px solid $colorPrimaryBase;
-    transform: scale(1.1);
-    & .poster-movie {
-      transform: scale(1);
-    }
-  }
 }
 
+.card_movie_simple_selected {
+  border: 4px solid $colorPrimaryBase;
+  transform: scale(1.1);
+  & .poster-movie {
+    transform: scale(1);
+  }
+}
 .simple-skeleton-loading {
   background: $colorPrimaryBase;
   border-color: transparent !important;
