feat ui: Add ContainerFavoritesMovies component
- Created ContainerFavoritesMovies component to display a section of favorite movies.
- Utilizes fakeDataPopularMovie to populate the list of favorite movies.

--- a/app/index.style.scss
+++ b/app/index.style.scss
@@ -135,7 +135,9 @@
 
 #film__recentes,
 #random_one,
-#random_two {
+#random_two,
+#tv__movies,
+#favorites__movies {
   @include flexbox(column, flex-start, flex-start);
   row-gap: 20px;
   padding-bottom: $paddingSection;
