--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -70,3 +70,22 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: $colorPrimaryBase;
 }
+
+.sections__movies {
+  @include flexbox(column, flex-start, flex-start);
+  row-gap: 20px;
+  padding-bottom: $paddingSection;
+  & .title__section {
+    margin: 0 $paddingSection;
+  }
+}
+
+@media only screen and (max-width: 1070px) {
+  $paddingSection: 20px;
+  .sections__movies {
+    padding-bottom: $paddingSection;
+    & .title__section {
+      margin: 0 $paddingSection;
+    }
+  }
+}
