Added banner section and container for displaying popular movies and TV shows. Used `CardMovie` component to render each item and added a button for viewing more content. Integrated lazy loading using `Suspense` component to enhance user experience.

--- a/components/button/style.scss
+++ b/components/button/style.scss
@@ -123,7 +123,7 @@
 
 .btn-loading {
   cursor: none !important;
-  padding: 0 20px !important;
+  padding: 10px 20px !important;
   border: 2px solid $colorNeutral2;
   border: none !important;
 
