--- a/components/card/style.scss
+++ b/components/card/style.scss
@@ -115,13 +115,11 @@
   display: flex;
   overflow: hidden;
   position: relative;
-  height: 300px;
-  width: 200px;
-  flex: none;
   border-radius: 0.5rem;
   border: 4px solid transparent;
   transition: all 0.3s linear;
   cursor: pointer;
+  height: 250px;
   & * {
     transition: all 0.3s linear;
   }
@@ -151,7 +149,7 @@
     align-items: flex-end;
     opacity: 0;
     bottom: -100%;
-    & .content {
+    & .content-mv {
       margin-top: auto;
       width: 100%;
       background: linear-gradient(
@@ -169,9 +167,9 @@
       padding-top: 5px;
       & .movie__title {
         font-family: $fontBold;
-        font-size: 1.3rem;
+        font-size: 1rem;
 
-        line-height: 1.48rem;
+        line-height: 1.2rem;
       }
       & .btn-link {
         text-decoration: none;
