--- a/components/footer/style.scss
+++ b/components/footer/style.scss
@@ -7,7 +7,10 @@
   padding: 25px $paddingSection;
   background: #0c0b0b;
   margin-top: auto;
+  margin-bottom: 0;
+  bottom: 0;
   flex-wrap: wrap;
+
   gap: 25px;
   & .text-footer {
     display: flex;
