Added banner section and container for displaying favorite movies. Used `CardMovieFavorite` component to render each item with additional details such as rating and language. Integrated lazy loading using `Suspense` component to enhance user experience.

--- a/app/favoris/style.scss
+++ b/app/favoris/style.scss
@@ -1,1 +1,96 @@
 @import "../../public/style/main.scss";
+
+#banner {
+  @include flexbox(column, flex-start, flex-start);
+  row-gap: 20px;
+  background: url("/images/cover/wallpaperflare.com_wallpaper.jpg");
+  font-family: $fontBold;
+
+  position: relative;
+  & p {
+    max-width: 800px;
+    font-size: 2rem;
+    line-height: 2.3rem;
+  }
+
+  z-index: 8;
+  & * {
+    z-index: 8;
+  }
+  & span {
+    color: $colorPrimaryBase;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    box-sizing: 0;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.12),
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.9),
+      rgb(0, 0, 0)
+    );
+  }
+}
+
+#content__favorite__movie {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  & .content-list {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  & .btn {
+    align-self: center;
+  }
+}
+
+@media only screen and (max-width: 1950px) {
+  #content__favorite__movie {
+    & .content-list {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  #content__favorite__movie {
+    & .content-list {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  #content__favorite__movie {
+    & .content-list {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  #content__favorite__movie {
+    & .content-list {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
+
+// @media only screen and (max-width: 300px) {
+//   #content__favorite__movie {
+//     & .content-list {
+//       grid-template-columns: repeat(1, 1fr);
+//     }
+//   }
+// }
