--- a/app/about/style.scss
+++ b/app/about/style.scss
@@ -1,1 +1,137 @@
 @import "../../public/style/main.scss";
+
+.section__about {
+  display: flex;
+  flex-direction: column;
+  row-gap: 55px;
+  align-items: center;
+}
+
+.card__about_container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.text-about {
+  max-width: 800px;
+  font-size: 1.5rem;
+  line-height: 1.7rem;
+  font-family: $fontBold;
+  text-align: center;
+  & span {
+    color: $colorPrimaryBase;
+  }
+}
+
+.section__faq {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+  .container__faq {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+  }
+}
+
+.section__share {
+  padding-bottom: 80px !important;
+  padding-top: 10px !important;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  .img-content {
+    display: flex;
+    align-items: center;
+  }
+
+  .text-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 25px;
+    & p {
+      font-family: $fontBold;
+      font-size: 2rem;
+      line-height: 2.3rem;
+
+      & span {
+        color: $colorPrimaryBase;
+      }
+    }
+  }
+}
+
+.btn-share {
+  cursor: pointer;
+  display: flex;
+  border-radius: 1.8rem;
+  gap: 10px;
+  align-items: center;
+  flex: none;
+  border-radius: 2.8rem;
+  transition: all 0.3s linear;
+  background: $colorPrimaryBase;
+  width: 210px;
+  padding: 10px;
+  overflow: hidden;
+  & * {
+    transition: all 0.3s linear;
+  }
+  &:hover {
+    background: $colorPrimary100;
+    .front {
+      width: 40px;
+      & p {
+        opacity: 0;
+      }
+    }
+    .content-icons {
+      opacity: 1;
+    }
+  }
+  .content-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin-right: 8px;
+    opacity: 0;
+    & a svg {
+      color: #222222;
+      height: 2rem;
+      width: 2rem;
+      flex: none;
+    }
+  }
+  .front {
+    flex: none;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    border-radius: 2.8rem;
+    background: $colorPrimaryBase;
+    padding: 10px;
+    color: #222222;
+    overflow: hidden;
+    width: 100%;
+
+    & svg {
+      height: 1.8rem;
+      width: 1.8rem;
+      flex: none;
+    }
+  }
+}
+
+@media only screen and (max-width: 1020px) {
+  .section__share {
+    grid-template-columns: 1fr;
+  }
+  .card__about_container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+}
