--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -86,6 +86,43 @@ body {
   padding: 180px $paddingSection;
   padding-bottom: 80px;
   align-self: stretch;
+  @include flexbox(column, flex-start, flex-start);
+  row-gap: 20px;
+  background: url("/images/cover/wallpaperflare.com_wallpaper.jpg");
+  font-family: $fontBold;
+
+  position: relative;
+  & p {
+    max-width: 800px;
+    font-size: 2rem;
+    line-height: 2.3rem;
+  }
+
+  z-index: 8;
+  & * {
+    z-index: 8;
+  }
+  & span {
+    color: $colorPrimaryBase;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    box-sizing: 0;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.12),
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.9),
+      rgb(0, 0, 0)
+    );
+  }
 }
 
 .container__padding {
