--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -128,6 +128,77 @@ body {
 .container__padding {
   padding: 20px $paddingSection;
 }
+
+.btn-share {
+  cursor: pointer;
+  display: flex;
+  border-radius: 1.8rem;
+  gap: 10px;
+  align-items: center;
+  flex: none;
+  border-radius: $raduisBtn;
+  transition: all 0.3s linear;
+  background: $colorPrimaryBase;
+  width: 180px;
+  padding: 5px;
+  overflow: hidden;
+  & * {
+    transition: all 0.3s linear;
+    font-size: 1.5rem !important;
+  }
+  &:hover {
+    background: $colorPrimary100;
+    .front {
+      width: 40px;
+      & p {
+        opacity: 0;
+      }
+      & svg {
+        margin-left: 10px;
+      }
+    }
+    .content-icons {
+      opacity: 1;
+    }
+  }
+  .content-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin-right: 8px;
+    opacity: 0;
+    & a svg {
+      color: #222222;
+      height: 1.5rem;
+      width: 1.5rem;
+      flex: none;
+    }
+  }
+  .front {
+    flex: none;
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    border-radius: $raduisBtn;
+    background: $colorPrimaryBase;
+    padding: 5px;
+    color: #222222;
+    overflow: hidden;
+    width: 100%;
+
+    & p {
+      align-self: center;
+      text-align: center;
+      font-size: 1.2rem !important;
+    }
+    & svg {
+      height: 1.3rem;
+      width: 1.3rem;
+      flex: none;
+    }
+  }
+}
 @media only screen and (max-width: 1070px) {
   $paddingSection: 20px;
   .sections__movies {
