--- a/app/index.style.scss
+++ b/app/index.style.scss
@@ -114,7 +114,7 @@
     z-index: 10;
     column-gap: 15px;
     & .btn {
-      height: 100% !important;
+      //height: 100% !important;
       align-self: stretch;
     }
   }
