--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -211,6 +211,35 @@ body {
     transform: translateY(-20px);
   }
 }
+
+.loading__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  .skeleton-loading {
+    background: rgba($colorPrimaryBase, 0.5);
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    height: 400px;
+    width: 100%;
+    animation: skeletonLoading 1.5s infinite alternate;
+  }
+}
+
+@keyframes skeletonLoading {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 0.85;
+  }
+}
+
 @media only screen and (max-width: 1070px) {
   $paddingSection: 20px;
   .sections__movies {
