--- a/components/card/style.scss
+++ b/components/card/style.scss
@@ -96,7 +96,12 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: $colorPrimaryBase;
+  background: rgba($colorPrimaryBase, 0.5);
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   animation: pulseskeletonPrimary 1.5s infinite alternate;
 }
 
@@ -202,7 +207,12 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: $colorPrimaryBase;
+  background: rgba($colorPrimaryBase, 0.5);
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   animation: pulseskeletonPrimary 1.5s infinite alternate;
 }
 
@@ -257,7 +267,12 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: $colorPrimaryBase;
+  background: rgba($colorPrimaryBase, 0.5);
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   animation: pulseskeletonPrimary 1.5s infinite alternate;
 }
 
@@ -305,7 +320,12 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: $colorPrimaryBase;
+  background: rgba($colorPrimaryBase, 0.5);
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   animation: pulseskeletonPrimary 1.5s infinite alternate;
 }
 
