Added two new React components ContainerRandomMovieOne and ContainerRandomMovieTwo to display random movies from a specific category. These components fetch movies based on the selected category using the API, then display them in movie cards. ContainerMoviesRandom utilizes these components to display two categories of random movies. The categories are randomly selected from all available categories. Display is handled based on the data loading state.

--- a/app/index.style.scss
+++ b/app/index.style.scss
@@ -146,6 +146,7 @@
   @include flexbox(column, flex-start, flex-start);
   row-gap: 20px;
   padding-bottom: $paddingSection;
+  padding-top: 25px !important;
   & .title__section {
     margin: 0 $paddingSection;
   }
