feat(moviePage): Implement random movie containers
- Created ContainerRandomMovieOne, ContainerRandomMovieTwo, ContainerRandomMovieThree, ContainerRandomMovieFour, and ContainerRandomMovieFive components to display random movies from different categories.
- Utilized useGetAllCategories hook to fetch all movie categories.
- Implemented logic to randomly select five movie categories.
- Integrated useMutation hook to fetch movies for each category.
- Added loading state handling for each movie container.

--- a/app/films/style.scss
+++ b/app/films/style.scss
@@ -68,6 +68,20 @@
   grid-template-columns: 1fr 1fr;
   transform: scale(0.6);
 }
+
+#random_one,
+#random_two,
+#random_three,
+#random_four,
+#random_five {
+  @include flexbox(column, flex-start, flex-start);
+  row-gap: 20px;
+  padding-bottom: $paddingSection;
+  padding-top: 25px !important;
+  & .title__section {
+    margin: 0 $paddingSection;
+  }
+}
 @media only screen and (max-width: 1070px) {
   $paddingSection: 20px;
   #banner__movie {
@@ -75,5 +89,17 @@
   }
   #container__all_movie {
     padding: 50px 10px;
+  }
+
+  #random_one,
+  #random_two,
+  #random_three,
+  #random_four,
+  #random_five {
+    @include flexbox(column, flex-start, flex-start);
+    padding-bottom: $paddingSection;
+    & .title__section {
+      margin: 0 $paddingSection;
+    }
   }
 }
