feat: Added movie and TV series detail page
This commit adds the MovieTvDetailPage, which displays details of a movie or TV series, including title, synopsis, rating, release date, genres, spoken languages, etc. The page uses the Banner and ContainerMovieSimilar components to display the main information and similar series respectively. Data is fetched from the API using the useGetDetailMovieTv hook.

--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -191,6 +191,7 @@ body {
       align-self: center;
       text-align: center;
       font-size: 1.2rem !important;
+      transform: translateX(10px) !important;
     }
     & svg {
       height: 1.3rem;
